<resources>
    <string name="app_name">Weather</string>

    <string name="city">City:</string>
    <string name="recent_search">Recent Search:</string>
    <string name="city_weather">Currently in %1$s:</string>
    <string name="city_temperature">%1$.1f °C</string>
    <string name="city_condition_day">Day - %1$s</string>
    <string name="city_condition_night">Night - %1$s</string>
    <string name="error">Unable to load weather from %1$s</string>
    <string name="retry">Retry</string>

</resources>